--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 }
 .calc-grid button{
     border: 2px solid whitesmoke;
+    border-radius: 5px;
     cursor: pointer;
     background-color: rgb(195, 190, 195);
     font-size: 2em;
@@ -31,4 +32,13 @@
 .input{
     grid-column: 1 / -1;
     color: #ffffff;
+    border: 1px solid whitesmoke;
+    font-size: 2em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-end;
+    padding: .6rem;
+    word-wrap: break-word;
+    word-break: break-all;
 }
